Fixed alignment of containers and their width in desktop layout.

--- a/src/scss/abstracts/_layout.scss
+++ b/src/scss/abstracts/_layout.scss
@@ -9,14 +9,13 @@
 }
 
 .container {
-  max-width: toRem(375);
+  max-width: to-rem(375);
   width: 100%;
   overflow: hidden;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
 
   @media only screen and (min-width: $desktop-layout) {
-    max-width: toRem(900);
+    max-width: to-rem(900);
   }
-
 }
