--- a/src/scss/components/_calculator_component.scss
+++ b/src/scss/components/_calculator_component.scss
@@ -3,7 +3,7 @@
 .calculator-container {
   align-items: center;
   justify-content: column;
-  max-width: toRem(375);
+  max-width: to-rem(375);
   width: 90%;
   text-align: left;
   margin-top: 30px;
@@ -13,6 +13,7 @@
   box-shadow: 3px 5px 10px $grayish-blue, -3px 5px 10px $grayish-blue, 0px -5px 0 $blue;
 
   @media only screen and (min-width: $desktop-layout) {
+    max-width: to-rem(300);
   }
 }
 
