--- a/src/scss/components/_introduction.scss
+++ b/src/scss/components/_introduction.scss
@@ -3,9 +3,13 @@
 .introduction-container {
   align-items: center;
   justify-content: column;
-  max-width: toRem(375);
+  max-width: to-rem(375);
   width: 90%;
   text-align:center;
+
+  @media only screen and (min-width: $desktop-layout) {
+    max-width: to-rem(300);
+  }
 }
 .semi-header {
   margin-bottom: 5px;
